test/parser/float_literals.0.stderr
<source>:7:14: error: float literal too large
    7 |     let f3 = 8_2e+_986_;
      |              ~~~~~~~~~~
